--- a/client/public/index.html
+++ b/client/public/index.html
@@ -16,7 +16,7 @@
     />
     <title>Simple React App</title>
   </head>
-  <body>
+  <body id="body">
     <div id="root"></div>
   </body>
 </html>
